--- a/app/src/main/res/layout/charging_item.xml
+++ b/app/src/main/res/layout/charging_item.xml
@@ -11,10 +11,11 @@
         android:id="@+id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_5"
+        android:layout_marginStart="@dimen/dp_10"
         android:src="@drawable/capacity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tv_value"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -22,22 +23,24 @@
         android:id="@+id/tv_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_5"
+        android:text="0.0"
         android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_content_sp_14"
         android:textStyle="bold"
-        android:text="0.0"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/tv_title"
         app:layout_constraintLeft_toRightOf="@+id/iv_icon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_5"
+        android:layout_marginTop="@dimen/dp_5"
+        android:gravity="center"
         android:textColor="@color/color_text_33"
         android:textSize="@dimen/size_content_sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
