--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -34,6 +34,8 @@
     <declare-styleable name="DataItemView">
         <attr name="lefticon" format="reference" />
         <attr name="title" format="string" />
+        <attr name="value" format="string"/>
+
     </declare-styleable>
 
 
