--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,29 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-    <include layout="@layout/toolbar"/>
-
-
-    <androidx.recyclerview.widget.RecyclerView
+    <com.shuoxd.lib.view.StatusBarHeightView
+        android:id="@+id/status_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
+    <com.shuoxd.charge.view.TitleBarLayout
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/status_bar"
+        app:titleText="@string/m38_setting" />
+
+
+    <com.shuoxd.charge.view.SettingItemView
+        android:id="@+id/item_bluetooth_connet"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="@dimen/dp_30"
+        app:itemName="@string/m122_bluetooth_connection"
+        app:leftIcon="@drawable/add_charge"
+        app:showLeftIcon="true"
+        app:showRightIcon="true"
+        app:showSubName="true" />
+
+    <com.shuoxd.charge.view.SettingItemView
+        android:id="@+id/item_wifi_account"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:itemName="@string/m123_wifi_account"
+        app:leftIcon="@drawable/add_charge"
+        app:showLeftIcon="true"
+        app:showRightIcon="true"
+        app:showSubName="true" />
+
+    <com.shuoxd.charge.view.SettingItemView
+        android:id="@+id/item_wifi_password"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:itemName="@string/m124_wifi_password"
+        app:leftIcon="@drawable/add_charge"
+        app:showLeftIcon="true"
+        app:showRightIcon="true"
+        app:showSubName="true" />
+
+    <com.shuoxd.charge.view.SettingItemView
+        android:id="@+id/item_charger_setting"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:itemName="@string/m125_charger_setting"
+        app:leftIcon="@drawable/add_charge"
+        app:showLeftIcon="true"
+        app:showRightIcon="true"
+        app:showSubName="true" />
 
 
     <Button
-        android:id="@+id/bt_logout"
+        android:id="@+id/bt_done"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="36dp"
+        android:textAllCaps="false"
+        android:text="@string/m126_done"
+        android:background="@drawable/selector_button_rect"
+        android:textColor="@color/white"
         android:textSize="@dimen/size_content_sp_12" />
-
 
 
 </LinearLayout>
