--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -11,7 +11,7 @@
     <com.shuoxd.lib.view.StatusBarHeightView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_eeeeeee" />
+        android:background="@color/white" />
 
     <com.shuoxd.charge.view.TitleBarLayout
         android:id="@+id/title"
