--- a/app/src/main/res/layout/add_your_charge.xml
+++ b/app/src/main/res/layout/add_your_charge.xml
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@null"
-            android:enabled="false"
+            android:clickable="false"
             android:textAllCaps="false"
             android:drawablePadding="@dimen/dp_10"
             android:drawableStart="@drawable/scan"
