--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -293,7 +293,8 @@
         android:background="@drawable/selector_button_rect"
         android:minWidth="@dimen/dp_250"
         android:padding="@dimen/dp_5"
-        android:text="@string/m4_login"
+        android:textAllCaps="false"
+        android:text="@string/m6_register"
         android:textColor="@color/white"
         android:textSize="@dimen/size_title_sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
