--- a/app/src/main/res/layout/item_scheduled.xml
+++ b/app/src/main/res/layout/item_scheduled.xml
@@ -19,8 +19,7 @@
 
             <LinearLayout
                 android:id="@+id/ll_time"
-                android:visibility="gone"
-                android:layout_width="@dimen/dp_60"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
@@ -29,14 +28,14 @@
                     android:layout_width="@dimen/dp_60"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="00:00"
-                    android:textColor="@color/color_text_66"
+                    android:textColor="@color/color_app_main_pressed"
                     android:textSize="@dimen/size_content_sp_14" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/color_app_main_pressed"
                     android:text="-" />
 
 
@@ -45,14 +44,13 @@
                     android:layout_width="@dimen/dp_60"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="12：00"
-                    android:textColor="@color/color_text_66"
+                    android:textColor="@color/color_app_main_pressed"
                     android:textSize="@dimen/size_content_sp_14" />
 
             </LinearLayout>
 
 
-
+<!--
             <TextView
                 android:id="@+id/tv_set_time"
                 android:layout_width="match_parent"
@@ -60,7 +58,7 @@
                 android:gravity="center"
                 android:text="@string/m169_set_time"
                 android:textColor="@color/color_app_main_pressed"
-                android:textSize="@dimen/size_content_sp_14" />
+                android:textSize="@dimen/size_content_sp_14" />-->
 
 
 
@@ -79,6 +77,7 @@
             android:layout_height="@dimen/dp_40"
             android:background="@drawable/shape_corner"
             android:gravity="center"
+            android:inputType="numberDecimal"
             android:textColor="@color/color_text_66"
             android:textSize="@dimen/size_content_sp_14" />
 
