--- a/app/src/main/res/layout/item_scheduled.xml
+++ b/app/src/main/res/layout/item_scheduled.xml
@@ -96,6 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_5"
+            android:layout_marginEnd="@dimen/dp_10"
             android:src="@drawable/delete" />
 
 
